added hovers to cardholder

--- a/index.html
+++ b/index.html
@@ -57,9 +57,18 @@
             <div class="backdetails">
                 <p class="b-link">
                     www.Enviser.com
-                </p>
+                </p>                <div class="auth">
+                    This card is Issued by NSTB Persuant to license by VISA/Pacific Pte. Ltd.
+                </div>
                 <div class="cvv">
-                    <p>000</p>
+                    <p>AUTHORIZED SIGNATURE - NOT VALID UNLESS SIGNED</p>
+                <div >
+                    <p class="cvp">000</p>
+                </div>
+
+                </div><!--cvv-->
+                <div class="btype">
+                   <p>DEBIT</p> 
                 </div>
                 <div class="line"></div>
             </div><!--backdetails-->
