modified the error of the viewport and added home view & content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.css">
     <title>Enviser</title>
@@ -28,6 +27,7 @@
     </div>  <!--header-->
     <div class="container">
     <div class="home">
+        <div class="home-view">
         <div class="effects">
             <div class="circle1"></div>
             <div class="circle2"></div>
@@ -57,7 +57,8 @@
             <div class="backdetails">
                 <p class="b-link">
                     www.Enviser.com
-                </p>                <div class="auth">
+                </p>
+                <div class="auth">
                     This card is Issued by NSTB Persuant to license by VISA/Pacific Pte. Ltd.
                 </div>
                 <div class="cvv">
@@ -75,6 +76,12 @@
         </div><!--card-back-->
     </div><!--cardholder-->
     </div><!--effects-->
+    <div class="home-content">
+        <h1>ENVISER</h1>
+        <P>Is a Professional Legel independent limited liability COP. For international World Wide visa cards</P>
+    </div>
+    <div class="clearfix"></div>
+    </div><!--home-view-->
     </div><!--home-->
 </div><!--container-->
 </body>
