added translate matrix to cards in 2nd sectio

--- a/index.html
+++ b/index.html
@@ -83,6 +83,26 @@
     <div class="clearfix"></div>
     </div><!--home-view-->
     </div><!--home-->
+    <!-- ///////// END OF HOME ////////// -->
+    <section class="ndsec">
+        <div class="nd-parent">
+            <div class="nd-content">
+                <div class="nd-sec-text">
+                    <h2>EASY TO USE</h2>
+                    <P>Several card types for WorldWide use with high limitations</P>
+                    <br>
+                    <small>Hover on any card you want</small>
+                </div><!--2nd-sec-text-->
+                <div class="card-types">
+                    <img src="images/Screenshot_7.png" alt="" class="img1">
+                    <img src="images/Screenshot_7.png" alt="" class="img2">
+                    <img src="images/Screenshot_7.png" alt="" class="img3">
+                    <img src="images/Screenshot_7.png" alt="" class="img4">
+                </div><!--card-types-->
+            </div><!--2nd-content-->
+            <div class="clearfix"></div>
+        </div><!--2nd-parent-->
+    </section><!--2nd section-->
 </div><!--container-->
 </body>
 </html>
