--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="nav">
             <ul>
                 <li><a href="#" class="header-active">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#2ndsec">About</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#offers">Services</a></li>
                 <li><a href="#pricing">Pricing</a></li>
@@ -84,14 +84,14 @@
     </div><!--home-view-->
     </div><!--home-->
     <!-- ///////// END OF HOME ////////// -->
-    <section class="ndsec">
-        <div class="nd-parent">
-            <div class="nd-content">
+    <section class="ndsec" id="2ndsec">
+        <div class="nd-parent" >
+            <div class="nd-content" >
                 <div class="nd-sec-text">
                     <h2>EASY TO USE</h2>
                     <P>Several card types for WorldWide use with high limitations</P>
                     <br>
-                    <small>Hover on any card you want</small>
+                    <small>Hover on any card for details</small>
                 </div><!--2nd-sec-text-->
                 <div class="card-types">
                     <img src="images/Screenshot_7.png" alt="" class="img1">
@@ -103,6 +103,45 @@
             <div class="clearfix"></div>
         </div><!--2nd-parent-->
     </section><!--2nd section-->
+    <!-- #################### START OF CARD featsures SECTION ############### -->
+    <section class="cards-featsec">
+        <div class="cf-parent">
+            <h2>What We Povide</h2>
+            <div class="cf-content">
+                <div class="item">
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Doloremque nulla magnam 
+                        facere exercitationem cum alias!</p>
+                        <a href="#">Apply Now</a>
+                </div><!--item1-->
+                <div class="item">
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Doloremque nulla magnam 
+                        facere exercitationem cum alias!</p>
+                        <a href="#">Apply Now</a>
+                </div><!--item1-->
+                <div class="item">
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Doloremque nulla magnam 
+                        facere exercitationem cum alias!</p>
+                        <a href="#">Apply Now</a>
+                </div><!--item1-->
+                <div class="item">
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Doloremque nulla magnam 
+                        facere exercitationem cum alias!</p>
+                        <a href="#">Apply Now</a>
+                </div><!--item1-->
+                <div class="item">
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Doloremque nulla magnam 
+                        facere exercitationem cum alias!</p>
+                        <a href="#">Apply Now</a>
+                </div><!--item1-->
+                <div class="clearfix"></div>
+            </div><!-- cf-content -->
+        </div><!--cf-parent-->
+        </section><!--cards-featsec-->
 </div><!--container-->
 </body>
 </html>
