added first part of section 4

--- a/index.html
+++ b/index.html
@@ -108,31 +108,31 @@
         <div class="cf-parent">
             <h2>What We Povide</h2>
             <div class="cf-content">
-                <div class="item">
+                <div class="item ita itb">
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Doloremque nulla magnam 
                         facere exercitationem cum alias!</p>
                         <a href="#">Apply Now</a>
                 </div><!--item1-->
-                <div class="item">
+                <div class="item ita itb">
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Doloremque nulla magnam 
                         facere exercitationem cum alias!</p>
                         <a href="#">Apply Now</a>
                 </div><!--item1-->
-                <div class="item">
+                <div class="item ita itb">
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Doloremque nulla magnam 
                         facere exercitationem cum alias!</p>
                         <a href="#">Apply Now</a>
                 </div><!--item1-->
-                <div class="item">
+                <div class="item ita itb">
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Doloremque nulla magnam 
                         facere exercitationem cum alias!</p>
                         <a href="#">Apply Now</a>
                 </div><!--item1-->
-                <div class="item">
+                <div class="item ita itb">
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Doloremque nulla magnam 
                         facere exercitationem cum alias!</p>
@@ -142,6 +142,19 @@
             </div><!-- cf-content -->
         </div><!--cf-parent-->
         </section><!--cards-featsec-->
+        <!-- ######################## END OF FEATSEC SECTION ####################### -->
+        <section class="services">
+            <div class="serv-parent">
+                <div class="phone">
+                    <div class="phone-screen">
+                        <div class="camera">
+                            <div class="cm"></div>
+                        </div>
+                        <img src="images/enviser.png" width="150" alt="logo">
+                    </div>
+                </div><!--phone-->
+            </div><!--serv-parent-->
+        </section><!--services-->
 </div><!--container-->
 </body>
 </html>
