added app details

--- a/index.html
+++ b/index.html
@@ -148,9 +148,57 @@
                 <div class="phone">
                     <div class="phone-screen">
                         <div class="camera">
-                            <div class="cm"></div>
                         </div>
-                        <img src="images/enviser.png" width="150" alt="logo">
+                      <div class="ph-content">
+                        <img src="images/enviser.png" width="150" alt="logo" class="app">
+                        <div class="ph-intxt">
+                            <div class="card front inmob">
+                                <div class="cardhead">
+                                <img src="images/enviser.png" width="40" alt="logo" >
+                                <span class="ctype">Platenium</span>
+                                <div class="cardsim">_____</div>
+                                </div><!--cardhead-->
+                                <div class="cardnumbers v2">
+                                   <h3>4332 7770 0777 0006</h3>
+                                   <div class="expiry expiry2">
+                                   <span class="ddate">VALID 
+                                     THRU</span>
+                                   <div class="p">
+                                    04/28
+                                   </div>
+                                </div><!--expiry-->
+                                </div><!--cardnumbers-->
+                                <div class="card-name"><h4>ENVISER CLIENT</h4>
+                                <div class="visa-logo visa-logo2">
+                                    <img src="images/Visa.png" width="70" alt="visa" class="vis">
+                                </div>
+                            </div><!--card name-->
+                        </div><!--ph-intxt-->
+                        <div class="app-details">
+                        <h3>Your Balance : 1420 EGP</h3>
+                        <p>View Statistics ></p>
+                        <P class="P2">+ ADD MONEY</P>
+                        <div class="offers">
+                         <h4>Essentials</h4>
+                         <div>
+                            <hr class="ddi">
+                            <hr class="ddi2">
+                            <hr class="ddi3">
+                         </div>
+                         <div>
+                            <hr class="ddi">
+                            <hr class="ddi2">
+                            <hr class="ddi3">
+                         </div>
+                         <div>
+                            <hr class="ddi">
+                            <hr class="ddi2">
+                            <hr class="ddi3">
+                         </div>
+                        </div><!--offers-->
+                        </div><!--app details-->
+                       </div><!--app-datails-->
+                      </div><!--ph-content-->
                     </div>
                 </div><!--phone-->
             </div><!--serv-parent-->
