added description of service section

--- a/index.html
+++ b/index.html
@@ -201,8 +201,19 @@
                       </div><!--ph-content-->
                     </div>
                 </div><!--phone-->
+                <!-- ################### end of phone #####################-->
+                <div class="app-details-desc">
+                    <h3>Everywhere Connected</h3>
+                    <p>you can easily manage your Visa card from your smartphone. You can check your balance, transactions, rewards, and more. You can also pay with your phone using Visa PayWave technology, which is fast, secure, and convenient.
+                         The Visa Connect app is the ultimate way to enjoy the benefits of your Visa card.</p>
+                         <div class="buttons">
+                            <a href="#"><i class="fa-brands fa-google-play"></i>DOWNLOAD</a>
+                            <a href="#"><i class="fa-brands fa-app-store"></i>DOWNLOAD</a>
+                         </div>
+                </div><!--app-details-desc-->
             </div><!--serv-parent-->
         </section><!--services-->
+        <!-- ############## services ends here############### -->
 </div><!--container-->
 </body>
 </html>
