--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#" class="header-active">Home</a></li>
                 <li><a href="#2ndsec">About</a></li>
                 <li><a href="#features">Features</a></li>
-                <li><a href="#offers">Services</a></li>
+                <li><a href="#services">Services</a></li>
                 <li><a href="#pricing">Pricing</a></li>
                 <li><a href="#updates">Updates</a></li>
                 <!-- <li><a href="#blog">Blog</a></li>
@@ -105,7 +105,7 @@
     </section><!--2nd section-->
     <!-- #################### START OF CARD featsures SECTION ############### -->
     <section class="cards-featsec">
-        <div class="cf-parent">
+        <div class="cf-parent" id="features">
             <h2>What We Povide</h2>
             <div class="cf-content">
                 <div class="item ita itb">
@@ -143,8 +143,8 @@
         </div><!--cf-parent-->
         </section><!--cards-featsec-->
         <!-- ######################## END OF FEATSEC SECTION ####################### -->
-        <section class="services">
-            <div class="serv-parent">
+        <section class="services" id="services">
+            <div class="serv-parent" >
                 <div class="phone">
                     <div class="phone-screen">
                         <div class="camera">
@@ -203,7 +203,7 @@
                 </div><!--phone-->
                 <!-- ################### end of phone #####################-->
                 <div class="app-details-desc">
-                    <h3>Everywhere Connected</h3>
+                    <h3>Connected Everywhere</h3>
                     <p>you can easily manage your Visa card from your smartphone. You can check your balance, transactions, rewards, and more. You can also pay with your phone using Visa PayWave technology, which is fast, secure, and convenient.
                          The Visa Connect app is the ultimate way to enjoy the benefits of your Visa card.</p>
                          <div class="buttons">
@@ -211,9 +211,62 @@
                             <a href="#"><i class="fa-brands fa-app-store"></i>DOWNLOAD</a>
                          </div>
                 </div><!--app-details-desc-->
+                <div class="clearfix"></div>
             </div><!--serv-parent-->
         </section><!--services-->
         <!-- ############## services ends here############### -->
+        <section class="animation-sec2">
+            <div class="animation-parent">
+                <div class="child">
+                    <div class="child1">
+                        <img src="images/enviser.png" alt="">
+                    </div>
+                </div>
+                <div class="child">
+                    <div class="child2">
+                        <img src="images/enviser.png" alt="">
+                    </div>
+                </div>
+                <div class="child">
+                    <div class="child3">
+                        <img src="images/enviser.png" alt="">
+                    </div>
+                </div>
+                <div class="child">
+                    <div class="child4">
+                        <img src="images/enviser.png" alt="">
+                    </div>
+                </div>
+                <div class="child">
+                    <div class="child5">
+                        <img src="images/enviser.png" alt="">
+                    </div>
+                </div>
+                <div class="child">
+                    <div class="child6">
+                        <img src="images/enviser.png" alt="">
+                    </div>
+                </div>
+            </div><!--animation-parent-->
+        </section><!--animation-sec2-->
+        <!-- ################# END OF ANIMATION SECTION ############## -->
+        <section class="env-feat">
+            <div class="rotate-cards-parent">
+                <div class="rotate-card rtc1">
+                    <div class="rtfront">
+                        <h2 class="aft">SILVER</h2>
+                    </div><!--rtfront-->
+                    <div class="rtback">
+                        <h4>Basic</h4>
+                        <h3>9.99$</h3>
+                        <p><i class="fa-solid fa-check"></i> Access to standerd plan Features</p>
+                        <p><i class="fa-solid fa-check"></i> 150 Country</p>
+                        <p><i class="fa-solid fa-check"></i> Technical Support</p>
+                        <a href="#" class="rta">Get Started</a>
+                    </div><!--rtback-->
+                </div><!--rotate-card rtc1-->
+            </div><!--rotate-cards-parent-->
+        </section><!--env-feat-->
 </div><!--container-->
 </body>
 </html>
