added the last items

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="card front">
             <div class="cardhead">
             <img src="images/enviser.png" width="40" alt="logo">
-            <span class="ctype">Platenium</span>
+            <span class="ctype">Diamond</span>
             <div class="cardsim">_____</div>
             </div><!--cardhead-->
             <div class="cardnumbers">
@@ -250,17 +250,78 @@
             </div><!--animation-parent-->
         </section><!--animation-sec2-->
         <!-- ################# END OF ANIMATION SECTION ############## -->
-        <section class="env-feat">
+        <section class="env-feat" id="pricing">
             <div class="rotate-cards-parent">
-                <div class="rotate-card rtc1">
-                    <div class="rtfront">
+                <div class="rotate-card rtc1" >
+                    <div class="rtfront" >
                         <h2 class="aft">SILVER</h2>
+                        <p>HOVER FOR MORE DETAILS</p>
                     </div><!--rtfront-->
                     <div class="rtback">
                         <h4>Basic</h4>
                         <h3>9.99$</h3>
+                        <p><i class="fa-solid fa-check"></i> Access to Basic plan Features</p>
+                        <p><i class="fa-solid fa-check"></i> 60 Countries</p>
+                        <p><i class="fa-solid fa-check"></i> Technical Support</p>
+                        <a href="#" class="rta">Get Started</a>
+                    </div><!--rtback-->
+                </div><!--rotate-card rtc1-->
+                <!-- ########### item 2 ########### -->
+                <div class="rotate-card rtc1">
+                    <div class="rtfront">
+                        <h2 class="aft">GOLD</h2>
+                        <p>HOVER FOR MORE DETAILS</p>
+                    </div><!--rtfront-->
+                    <div class="rtback">
+                        <h4>STANDRED</h4>
+                        <h3>15.99$</h3>
                         <p><i class="fa-solid fa-check"></i> Access to standerd plan Features</p>
-                        <p><i class="fa-solid fa-check"></i> 150 Country</p>
+                        <p><i class="fa-solid fa-check"></i> 90 Countries</p>
+                        <p><i class="fa-solid fa-check"></i> Technical Support</p>
+                        <a href="#" class="rta">Get Started</a>
+                    </div><!--rtback-->
+                </div><!--rotate-card rtc1-->
+                <!-- ######## item 3 ######### -->
+                <div class="rotate-card rtc1">
+                    <div class="rtfront">
+                        <h2 class="aft">PLATINIUM</h2>
+                        <p>HOVER FOR MORE DETAILS</p>
+                    </div><!--rtfront-->
+                    <div class="rtback">
+                        <h4>PRO</h4>
+                        <h3>25.99$</h3>
+                        <p><i class="fa-solid fa-check"></i> Access to PRO plan Features</p>
+                        <p><i class="fa-solid fa-check"></i> 90+ Countries</p>
+                        <p><i class="fa-solid fa-check"></i> Technical Support</p>
+                        <a href="#" class="rta">Get Started</a>
+                    </div><!--rtback-->
+                </div><!--rotate-card rtc1-->
+                <!-- ######## item 3 ######### -->
+                <div class="rotate-card rtc1">
+                    <div class="rtfront">
+                        <h2 class="aft">TITENIUM</h2>
+                        <p>HOVER FOR MORE DETAILS</p>
+                    </div><!--rtfront-->
+                    <div class="rtback">
+                        <h4>PRO+</h4>
+                        <h3>35.99$</h3>
+                        <p><i class="fa-solid fa-check"></i> Access to Pro+ plan Features</p>
+                        <p><i class="fa-solid fa-check"></i> 120 Countries</p>
+                        <p><i class="fa-solid fa-check"></i> Technical Support</p>
+                        <a href="#" class="rta">Get Started</a>
+                    </div><!--rtback-->
+                </div><!--rotate-card rtc1-->
+                <!-- ######## item 4 ######### -->
+                <div class="rotate-card rtc1">
+                    <div class="rtfront">
+                        <h2 class="aft">DIAMOND</h2>
+                        <p>HOVER FOR MORE DETAILS</p>
+                    </div><!--rtfront-->
+                    <div class="rtback">
+                        <h4>ADVANCED</h4>
+                        <h3>49.99$</h3>
+                        <p><i class="fa-solid fa-check"></i> Access to ADVANCED plan Features</p>
+                        <p><i class="fa-solid fa-check"></i> 150+ Countries</p>
                         <p><i class="fa-solid fa-check"></i> Technical Support</p>
                         <a href="#" class="rta">Get Started</a>
                     </div><!--rtback-->
