added updated section section & 1st item

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         <p><i class="fa-solid fa-check"></i> Access to Basic plan Features</p>
                         <p><i class="fa-solid fa-check"></i> 60 Countries</p>
                         <p><i class="fa-solid fa-check"></i> Technical Support</p>
-                        <a href="#" class="rta">Get Started</a>
+                        <a href="#" class="rta">Apply</a>
                     </div><!--rtback-->
                 </div><!--rotate-card rtc1-->
                 <!-- ########### item 2 ########### -->
@@ -278,7 +278,7 @@
                         <p><i class="fa-solid fa-check"></i> Access to standerd plan Features</p>
                         <p><i class="fa-solid fa-check"></i> 90 Countries</p>
                         <p><i class="fa-solid fa-check"></i> Technical Support</p>
-                        <a href="#" class="rta">Get Started</a>
+                        <a href="#" class="rta">Apply</a>
                     </div><!--rtback-->
                 </div><!--rotate-card rtc1-->
                 <!-- ######## item 3 ######### -->
@@ -293,7 +293,7 @@
                         <p><i class="fa-solid fa-check"></i> Access to PRO plan Features</p>
                         <p><i class="fa-solid fa-check"></i> 90+ Countries</p>
                         <p><i class="fa-solid fa-check"></i> Technical Support</p>
-                        <a href="#" class="rta">Get Started</a>
+                        <a href="#" class="rta">Apply</a>
                     </div><!--rtback-->
                 </div><!--rotate-card rtc1-->
                 <!-- ######## item 3 ######### -->
@@ -308,7 +308,7 @@
                         <p><i class="fa-solid fa-check"></i> Access to Pro+ plan Features</p>
                         <p><i class="fa-solid fa-check"></i> 120 Countries</p>
                         <p><i class="fa-solid fa-check"></i> Technical Support</p>
-                        <a href="#" class="rta">Get Started</a>
+                        <a href="#" class="rta">Apply</a>
                     </div><!--rtback-->
                 </div><!--rotate-card rtc1-->
                 <!-- ######## item 4 ######### -->
@@ -323,11 +323,27 @@
                         <p><i class="fa-solid fa-check"></i> Access to ADVANCED plan Features</p>
                         <p><i class="fa-solid fa-check"></i> 150+ Countries</p>
                         <p><i class="fa-solid fa-check"></i> Technical Support</p>
-                        <a href="#" class="rta">Get Started</a>
+                        <a href="#" class="rta">Apply</a>
                     </div><!--rtback-->
                 </div><!--rotate-card rtc1-->
             </div><!--rotate-cards-parent-->
         </section><!--env-feat-->
+        <!-- END OF ROTATE CARDS SECTION -->
+        <!-- START OF FEATURED FIGURES SECTION -->
+        <section class="updates">
+            <div class="updates-parent">
+                <div class="upi1">
+                    <figure>
+                        <img src="images/wallhaven-6kk75x.jpg" alt="updates(v)">
+                    </figure>
+                    <div class="up1text">
+                    <h3>Recent Updates</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing 
+                        elit. Illo, temporibus!</p>
+                    </div><!--up1text-->
+                </div>
+            </div><!--updates-parent-->
+        </section><!--updates-->
 </div><!--container-->
 </body>
 </html>
