added updated section section & items

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <ul>
                 <li><a href="#" class="header-active">Home</a></li>
                 <li><a href="#2ndsec">About</a></li>
-                <li><a href="#features">Features</a></li>
+                <li><a href="#UPDATES">Features</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#pricing">Pricing</a></li>
-                <li><a href="#updates">Updates</a></li>
+                <li><a href="#features">Types</a></li>
                 <!-- <li><a href="#blog">Blog</a></li>
                 <li><a href="#team">Team</a></li> -->
             </ul>
@@ -103,45 +103,48 @@
             <div class="clearfix"></div>
         </div><!--2nd-parent-->
     </section><!--2nd section-->
-    <!-- #################### START OF CARD featsures SECTION ############### -->
-    <section class="cards-featsec">
-        <div class="cf-parent" id="features">
-            <h2>What We Povide</h2>
-            <div class="cf-content">
-                <div class="item ita itb">
-                    <p>Lorem ipsum dolor sit amet consectetur 
-                        adipisicing elit. Doloremque nulla magnam 
-                        facere exercitationem cum alias!</p>
-                        <a href="#">Apply Now</a>
-                </div><!--item1-->
-                <div class="item ita itb">
-                    <p>Lorem ipsum dolor sit amet consectetur 
-                        adipisicing elit. Doloremque nulla magnam 
-                        facere exercitationem cum alias!</p>
-                        <a href="#">Apply Now</a>
-                </div><!--item1-->
-                <div class="item ita itb">
-                    <p>Lorem ipsum dolor sit amet consectetur 
-                        adipisicing elit. Doloremque nulla magnam 
-                        facere exercitationem cum alias!</p>
-                        <a href="#">Apply Now</a>
-                </div><!--item1-->
-                <div class="item ita itb">
-                    <p>Lorem ipsum dolor sit amet consectetur 
-                        adipisicing elit. Doloremque nulla magnam 
-                        facere exercitationem cum alias!</p>
-                        <a href="#">Apply Now</a>
-                </div><!--item1-->
-                <div class="item ita itb">
-                    <p>Lorem ipsum dolor sit amet consectetur 
-                        adipisicing elit. Doloremque nulla magnam 
-                        facere exercitationem cum alias!</p>
-                        <a href="#">Apply Now</a>
-                </div><!--item1-->
-                <div class="clearfix"></div>
-            </div><!-- cf-content -->
-        </div><!--cf-parent-->
-        </section><!--cards-featsec-->
+            <!-- START OF FEATURED FIGURES SECTION -->
+            <section class="updates">
+                <div class="updates-parent" id="UPDATES">
+                    <div class="upi1">
+                        <figure>
+                            <img src="images/wallhaven-6kk75x.jpg" alt="updates(v)">
+                        </figure>
+                        <div class="up1text">
+                        <h3>Recent Features</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing 
+                            elit. Illo, temporibus!</p>
+                            <a href="#UPDATES">View</a>
+                        </div><!--up1text-->
+                    </div><!--upi1-->
+                    <!-- ########### 2 ########### -->
+                    <div class="upi1">
+                        <figure>
+                            <img src="images/wallhaven-6kk75x.jpg" alt="updates(v)">
+                        </figure>
+                        <div class="up1text">
+                        <h3>Recent Features</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing 
+                            elit. Illo, temporibus!</p>
+                            <a href="#UPDATES">View</a>
+                        </div><!--up1text-->
+                    </div><!--upi1-->
+                    <!-- ########### 2 ########### -->
+                    <div class="upi1">
+                        <figure>
+                            <img src="images/wallhaven-6kk75x.jpg" alt="updates(v)">
+                        </figure>
+                        <div class="up1text">
+                        <h3>Recent Features</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing 
+                            elit. Illo, temporibus!</p>
+                            <a href="#UPDATES">View</a>
+                        </div><!--up1text-->
+                    </div><!--upi1-->
+                </div><!--updates-parent-->
+            </section><!--updates-->
+            <!-- end of updates section  -->
+
         <!-- ######################## END OF FEATSEC SECTION ####################### -->
         <section class="services" id="services">
             <div class="serv-parent" >
@@ -329,21 +332,51 @@
             </div><!--rotate-cards-parent-->
         </section><!--env-feat-->
         <!-- END OF ROTATE CARDS SECTION -->
+            <!-- #################### START OF CARD featsures SECTION ############### -->
+    <section class="cards-featsec">
+        <div class="cf-parent" id="features">
+            <h2>What We Povide</h2>
+            <div class="cf-content">
+                <div class="item ita itb">
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Doloremque nulla magnam 
+                        facere exercitationem cum alias!</p>
+                        <a href="#">Apply Now</a>
+                </div><!--item1-->
+                <div class="item ita itb">
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Doloremque nulla magnam 
+                        facere exercitationem cum alias!</p>
+                        <a href="#">Apply Now</a>
+                </div><!--item1-->
+                <div class="item ita itb">
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Doloremque nulla magnam 
+                        facere exercitationem cum alias!</p>
+                        <a href="#">Apply Now</a>
+                </div><!--item1-->
+                <div class="item ita itb">
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Doloremque nulla magnam 
+                        facere exercitationem cum alias!</p>
+                        <a href="#">Apply Now</a>
+                </div><!--item1-->
+                <div class="item ita itb">
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Doloremque nulla magnam 
+                        facere exercitationem cum alias!</p>
+                        <a href="#">Apply Now</a>
+                </div><!--item1-->
+                <div class="clearfix"></div>
+            </div><!-- cf-content -->
+        </div><!--cf-parent-->
+        </section><!--cards-featsec-->
         <!-- START OF FEATURED FIGURES SECTION -->
-        <section class="updates">
-            <div class="updates-parent">
-                <div class="upi1">
-                    <figure>
-                        <img src="images/wallhaven-6kk75x.jpg" alt="updates(v)">
-                    </figure>
-                    <div class="up1text">
-                    <h3>Recent Updates</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing 
-                        elit. Illo, temporibus!</p>
-                    </div><!--up1text-->
-                </div>
-            </div><!--updates-parent-->
-        </section><!--updates-->
+        <section class="spinner">
+            <div class="spinner-parent">
+                </div><!--spinner-holder-->
+            </div><!--spinner-parent-->
+        </section><!--spinner-->
 </div><!--container-->
 </body>
 </html>
