added display grid to cf section

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                      THRU</span>
                                    <div class="p">
                                     04/28
-                                   </div>
+                                                   </div>
                                 </div><!--expiry-->
                                 </div><!--cardnumbers-->
                                 <div class="card-name"><h4>ENVISER CLIENT</h4>
@@ -361,13 +361,12 @@
                         facere exercitationem cum alias!</p>
                         <a href="#">Apply Now</a>
                 </div><!--item1-->
-                <div class="item ita itb">
+                <div class="item ita1 itb">
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Doloremque nulla magnam 
                         facere exercitationem cum alias!</p>
                         <a href="#">Apply Now</a>
                 </div><!--item1-->
-                <div class="clearfix"></div>
             </div><!-- cf-content -->
         </div><!--cf-parent-->
         </section><!--cards-featsec-->
