added slider  section

--- a/index.html
+++ b/index.html
@@ -332,6 +332,66 @@
             </div><!--rotate-cards-parent-->
         </section><!--env-feat-->
         <!-- END OF ROTATE CARDS SECTION -->
+            <!-- START OF FEATURED FIGURES SECTION -->
+            <section class="loader">
+                <div class="loader-parent">
+                    <div class="ldr ldr1">
+                        <!-- <i class="fa-light fa-bolt"></i> -->
+                      <div class="icon-re">
+                        <i class="fa-solid fa-truck-arrow-right hidup"></i>
+                        <i class="fa-solid fa-truck-arrow-right risup"></i>
+                       </div><!--icon-re-->
+                        <div class="ldr-desc">
+                        <p>Fast & Easy</p>
+                        <p class="ldr-p">Easy fast service without errors</p>
+                        </div><!--ldr-desc-->
+                    </div><!--ldr ldr1-->
+                    <div class="ldr ldr1">
+                        <!-- <i class="fa-light fa-bolt"></i> -->
+                      <div class="icon-re">
+                        <i class="fa-solid fa-circle-notch hidup"></i>
+                        <i class="fa-solid fa-circle-notch risup"></i>
+                       </div><!--icon-re-->
+                        <div class="ldr-desc">
+                        <p>Fast & Easy</p>
+                        <p class="ldr-p">Easy fast service without errors</p>
+                        </div><!--ldr-desc-->
+                    </div><!--ldr ldr1-->
+                    <div class="ldr ldr1">
+                        <!-- <i class="fa-light fa-bolt"></i> -->
+                      <div class="icon-re">
+                        <i class="fa-solid fa-handshake hidup"></i>
+                        <i class="fa-solid fa-handshake risup"></i>
+                       </div><!--icon-re-->
+                        <div class="ldr-desc">
+                        <p>Fast & Easy</p>
+                        <p class="ldr-p">Easy fast service withnout errors</p>
+                        </div><!--ldr-desc-->
+                    </div><!--ldr ldr1-->
+                    <div class="ldr ldr1">
+                        <!-- <i class="fa-light fa-bolt"></i> -->
+                      <div class="icon-re">
+                        <i class="fa-solid fa-signature hidup"></i>
+                        <i class="fa-solid fa-signature risup"></i>
+                       </div><!--icon-re-->
+                        <div class="ldr-desc">
+                        <p>Fast & Easy</p>
+                        <p class="ldr-p">Easy fast service withnout errors</p>
+                        </div><!--ldr-desc-->
+                    </div><!--ldr ldr1-->
+                    <div class="ldr ldr1 ldrlast">
+                        <!-- <i class="fa-light fa-bolt"></i> -->
+                      <div class="icon-re">
+                        <i class="fa-solid fa-credit-card hidup"></i>
+                        <i class="fa-solid fa-credit-card risup"></i>
+                       </div><!--icon-re-->
+                        <div class="ldr-desc">
+                        <p>Fast & Easy</p>
+                        <p class="ldr-p">Easy fast service witnout errors</p>
+                        </div><!--ldr-desc-->
+                    </div><!--ldr ldr1-->
+                </div><!--loader-parent-->
+            </section><!--Loader-->
             <!-- #################### START OF CARD featsures SECTION ############### -->
     <section class="cards-featsec">
         <div class="cf-parent" id="features">
@@ -371,11 +431,6 @@
         </div><!--cf-parent-->
         </section><!--cards-featsec-->
         <!-- START OF FEATURED FIGURES SECTION -->
-        <section class="spinner">
-            <div class="spinner-parent">
-                </div><!--spinner-holder-->
-            </div><!--spinner-parent-->
-        </section><!--spinner-->
 </div><!--container-->
 </body>
 </html>
